[package]
name = "gba"
version = "0.1.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "A support library for writing Gameboy Advanced games in Rust"
keywords = ["gba", "gameboy"]
categories = ["embedded"]
license = "MIT"

[build-dependencies]
gcc = "0.3.54"

[dependencies]
#num = "0.1.42"