[package]
name = "gba-core"
version = "0.1.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "A support library for writing Gameboy Advanced games in Rust"
keywords = ["gba", "gameboy"]
categories = ["embedded"]
license = "MIT"
edition = "2018"

[dependencies]
embedded-builder = { git = "https://github.com/ryankurte/rust-embedded-builder.git" }
gba = "0.3.2"
